--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.password=*Root@password
+spring.datasource.password=mukho123!@
