--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
 spring.datasource.password=mukho123!@
+spring.pa.hibernate.ddl-auto = none
