--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'com.example'
-version = '1.4.4-SNAPSHOT'
+group = 'com.mukho'
+version = '2.0.0-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
