--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,15 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          java-package: jdk
+          architecture: x64
+          check-latest: false
+          server-id: github
+          server-username: GITHUB_ACTOR
+          server-password: GITHUB_TOKEN
+          overwrite-settings: true
+          job-status: success
+          distribution: adoptium
       - name: Build Project
         run: ./gradlew clean build
       - name: Deploy Project
