--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
           server-password: GITHUB_TOKEN
           overwrite-settings: true
           job-status: success
+          distribution: adoptium
       - name: Build Project
         run: ./gradlew clean build
       - name: Deploy Project
