--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           server-password: GITHUB_TOKEN
           overwrite-settings: true
           job-status: success
-          distribution: adoptium
+          distribution: adopt
       - name: Build Project
         run: ./gradlew clean build
       - name: Deploy Project
