--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,11 @@ jobs:
       - name: Build Project(without test)
         run: ./gradlew clean build -x test
       - name: Deploy Project
-        run: java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar
+        run: |
+          java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
+            --spring.datasource.url="${{ secrets.DATABASE_URL }}" \
+            --spring.datasource.username="${{ secrets.DATABASE_USERNAME }}" \
+            --spring.datasource.password="${{ secrets.DATABASE_PASSWORD }}"
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           DATABASE_USERNAME: ${{ secrets.DATABASE_USERNAME }}
