--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,4 @@ jobs:
       - name: Deploy Project
         run: |
           java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
-            --spring.datasource.url="${{ secrets.DATABASE_URL }}" \
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+            --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
