--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=root
+spring.datasource.username=mukho
 spring.datasource.password=mukho123!@
 spring.pa.hibernate.ddl-auto=none
