--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,14 @@ jobs:
           overwrite-settings: true
           job-status: success
           distribution: adopt
-      - name: Build Project(without test)
-        run: ./gradlew clean build -x test
-      - name: Deploy Project
+      - name: Build Project(without test) and Test
         run: |
-          nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
+          ./gradlew clean build -x test
+          ./gradlew test
+      - name: Deploy Project
+        if: success()
+        run: |
+          java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
             --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
             --spring.datasource.username=mukho
             --spring.datasource.password=mukho123!@
