--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,8 @@ jobs:
         run: |
           ./gradlew clean build -x test
       - name: Deploy Project
-        if: success()
         run: |
-          java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
+          nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
             --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
             --spring.datasource.username=mukho
-            --spring.datasource.password=mukho123!@
+            --spring.datasource.password=mukho123!@ & exit 0
