--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build React
         run: |
           git submodule update --init --recursive
       - name: Install Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: 17
           java-package: jdk
@@ -34,4 +35,4 @@ jobs:
           nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
             --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
             --spring.datasource.username=mukho
-            --spring.datasource.password=mukho123!@ & exit 0
+            --spring.datasource.password=mukho123!@
