--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,12 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read
+
 jobs:
   build:
+  
     runs-on: ubuntu-latest
     
     steps:
@@ -30,9 +34,3 @@ jobs:
       - name: Build Project(without test)
         run: |
           ./gradlew clean build -x test
-      - name: Deploy Project
-        run: |
-          nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
-            --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
-            --spring.datasource.username=mukho
-            --spring.datasource.password=mukho123!@
