--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/resources/application.properties
+espers-starcraft-ranking-df3ead9e3759.json
 
 ### STS ###
 .apt_generated
