--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Publish app to Google App Engine
         uses: zxyle/publish-gae-action@v2.3.0
         with:
-          service_account_key: ${{ GCP_SA_KEY }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
           service_email: ${{ secrets.GCP_SA_EMAIL }}
           project_id: ${{ secrets.PROJECT_ID }}
         
