--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -38,6 +38,6 @@ jobs:
         uses: zxyle/publish-gae-action@v2.3.0
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-          service_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           project_id: ${{ secrets.PROJECT_ID }}
         
