--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,10 +34,16 @@ jobs:
       - name: Build Project(without test)
         run: |
           ./gradlew clean build -x test
-      - name: Publish app to Google App Engine
-        uses: zxyle/publish-gae-action@vmaster
+      - name: Initialize Google Cloud SDK
+        uses: zxyle/publish-gae-action@master
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           project_id: ${{ secrets.PROJECT_ID }}
+      - name: Publish app to Google App Engine
+        run: |
+          gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=client-secret.json
+          gcloud config set project ${{ secrets.PROJECT_ID }}
+          gcloud -q app deploy app.yaml --promote
+          gcloud -q app deploy cron.yaml
         
