--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,10 +40,10 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           project_id: ${{ secrets.PROJECT_ID }}
+          gae_variables: ${{ secrets.GAE_VARIABLES }}
       - name: Publish app to Google App Engine
         run: |
           gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=client-secret.json
           gcloud config set project ${{ secrets.PROJECT_ID }}
           gcloud -q app deploy app.yaml --promote
-          gcloud -q app deploy cron.yaml
         
