--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,16 +34,9 @@ jobs:
       - name: Build Project(without test)
         run: |
           ./gradlew clean build -x test
-      - name: Initialize Google Cloud SDK
-        uses: zxyle/publish-gae-action@master
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          project_id: ${{ secrets.PROJECT_ID }}
-          gae_variables: ${{ secrets.GAE_VARIABLES }}
       - name: Publish app to Google App Engine
-        run: |
-          gcloud auth activate-service-account ${{ secrets.GCP_SA_EMAIL }} --key-file=client-secret.json
-          gcloud config set project ${{ secrets.PROJECT_ID }}
-          gcloud -q app deploy app.yaml --promote
-        
+        uses: zxyle/publish-gae-action@v2.3.0
+        with:
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
