--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -4,37 +4,40 @@ on:
   push:
     branches:
       - master
-      
-steps:
-- name: Checkout Code
-  id: checkout_code
-  uses: actions/checkout@v2
-
-- name: Build React
-  run: |
-    git submodule update --init --recursive
-
-- name: Set up Java
-  uses: actions/setup-java@v2
-  with:
-    java-version: 17
-    java-package: jdk
-    architecture: x64
-    check-latest: false
-    server-id: github
-    server-username: ${{ github.actor }}
-    server-password: ${{ secrets.GITHUB_TOKEN }}
-    overwrite-settings: true
-    job-status: success
-    distribution: adopt
-
-- name: Build Project (without tests)
-  run: |
-    ./gradlew clean build -x test
-
-- name: Deploy to Google App Engine
-  id: deploy_app_engine
-  run: echo "Deployment to Google App Engine goes here"
-  env:
-    GOOGLE_CLOUD_PROJECT: ${{ secrets.PROJECT_ID }}
-    GOOGLE_CLOUD_KEYFILE_JSON: ${{ secrets.GCP_SA_KEY }}
+jobs:
+  build:
+    runs-on: ubuntu-lastest
+    
+    steps:
+    - name: Checkout Code
+      id: checkout_code
+      uses: actions/checkout@v2
+    
+    - name: Build React
+      run: |
+        git submodule update --init --recursive
+    
+    - name: Set up Java
+      uses: actions/setup-java@v2
+      with:
+        java-version: 17
+        java-package: jdk
+        architecture: x64
+        check-latest: false
+        server-id: github
+        server-username: ${{ github.actor }}
+        server-password: ${{ secrets.GITHUB_TOKEN }}
+        overwrite-settings: true
+        job-status: success
+        distribution: adopt
+    
+    - name: Build Project (without tests)
+      run: |
+        ./gradlew clean build -x test
+    
+    - name: Deploy to Google App Engine
+      id: deploy_app_engine
+      run: echo "Deployment to Google App Engine goes here"
+      env:
+        GOOGLE_CLOUD_PROJECT: ${{ secrets.PROJECT_ID }}
+        GOOGLE_CLOUD_KEYFILE_JSON: ${{ secrets.GCP_SA_KEY }}
