--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -37,7 +37,12 @@ jobs:
     
     - name: Deploy to Google App Engine
       id: deploy_app_engine
-      run: echo "Deployment to Google App Engine goes here"
+      run: |
+        # 프로젝트 빌드
+        ./gradlew clean build
+        
+        # 스프링 프로젝트 실행
+        java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar
       env:
         GOOGLE_CLOUD_PROJECT: ${{ secrets.PROJECT_ID }}
         GOOGLE_CLOUD_KEYFILE_JSON: ${{ secrets.GCP_SA_KEY }}
