--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,8 @@ jobs:
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.PROJECT_ID }}
+      - name: Deploy Project
+        run: nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
+            --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
+            --spring.datasource.username=mukho
+            --spring.datasource.password=mukho123!@ &
