--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
           project_id: ${{ secrets.PROJECT_ID }}
       - name: Deploy Project
         run: nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
-            --spring.datasource.url="jdbc:mysql://34.83.157.18:3306/rank_system?characterEncoding=UTF-8&serverTimezone=Asia/Seoul"
-            --spring.datasource.username=mukho
-            --spring.datasource.password=mukho123!@ &
+            --spring.datasource.url=${{ secrets.DB_URL }}
+            --spring.datasource.username=${{ secrets.DB_USERNAME }}
+            --spring.datasource.password=${{ secrets.DB_PASSWORD }} &
