--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,4 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.PROJECT_ID }}
       - name: Deploy Project
-        run: nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
-            --spring.datasource.url=${{ secrets.DB_URL }}
-            --spring.datasource.username=${{ secrets.DB_USERNAME }}
-            --spring.datasource.password=${{ secrets.DB_PASSWORD }} &
+        run: nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar &
