--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,6 @@ jobs:
       - name: Deploy Project
         run: |
           nohup java -jar build/libs/rank-system-2.0.0-SNAPSHOT.jar \
-          --spring.datasource.url=${{ secrets.DB_URL }} &
+          --spring.datasource.url=${{ secrets.DB_URL }} \
+          --spring.datasource.username=${{ secrets.DB_USERNAME }} \
+          --spring.datasource.password=${{ secrets.DB_PASSWORD }} &
