--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+                
+      - name: Authenticate with Google Cloud
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > key.json
+          gcloud auth activate-service-account --key-file=key.json
+          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: key.json
+    
       - uses: actions/checkout@v2
       - name: Build React
         run: |
@@ -35,14 +44,6 @@ jobs:
       - name: Build Project(without test)
         run: |
           ./gradlew clean build -x test
-          
-      - name: Authenticate with Google Cloud
-        run: |
-          echo ${{ secrets.GCP_SA_KEY }} > key.json
-          gcloud auth activate-service-account --key-file=key.json
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: key.json
           
       - name: Publish app to Google App Engine
         uses: zxyle/publish-gae-action@v2.3.0
