--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           echo '${{ secrets.GCP_SA_KEY }}' > key.json
           gcloud config set project ${{ secrets.PROJECT_ID }}
-          gcloud auth login
+          gcloud auth activate-service-account --key-file=key.json --verbosity=debug
           gcloud app create
           gcloud app deploy ./build/libs/rank-system-2.0.0-SNAPSHOT.jar --version=v2 --quiet
