--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
           echo '${{ secrets.GCP_SA_KEY }}' > key.json
           gcloud config set project ${{ secrets.PROJECT_ID }}
           gcloud auth activate-service-account --key-file=key.json --verbosity=debug
-          gcloud app create
+          gcloud app create --region=US-WEST1
           gcloud app deploy ./build/libs/rank-system-2.0.0-SNAPSHOT.jar --version=v2 --quiet
