--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,6 @@ jobs:
           gcloud config get-value project
           gcloud config configurations list
           gcloud auth list
-          gcloud app create --region=US-WEST1
+          gcloud app regions list
+          gcloud app create --region=us-west1
           gcloud app deploy ./build/libs/rank-system-2.0.0-SNAPSHOT.jar --version=v2 --quiet
