--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-!**/src/main/resources/application.properties
+src/main/resources/application.properties
 espers-starcraft-ranking-df3ead9e3759.json
 
 ### STS ###
@@ -37,3 +37,4 @@ out/
 
 ### VS Code ###
 .vscode/
+.DS_Store
